Preserve last passing candidate for org.neo4j.bolt:neo4j-bolt-connection-pooled:3.0.0